svm/sdk-macros/tests/compile_fail/unchecked_sub.stderr
error: unchecked arithmetic is forbidden in #[sophis_contract]; use `.checked_sub()` and handle the `None` overflow case explicitly
 --> tests/compile_fail/unchecked_sub.rs:6:17
  |
6 |     utxo.amount - 100 > 0
  |                 ^
